# incydr_python

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE.txt  README.md  index.html  mkdocs.yml  package-lock.json  pyproject.toml  renovate.json  sitemap.xml  tmp_model.py
.github/workflows/: build.yml  docs-publish.yml  docs.yml  publish.yml  renovate.yml  style.yml
api/: index.html
cli/: index.html
cli/bulk/: index.html
cli/cmds/actors/: index.html
cli/cmds/agents/: index.html
cli/cmds/alert_rules/: index.html
cli/cmds/alerts/: index.html
cli/cmds/audit_log/: index.html
cli/cmds/cases/: index.html
cli/cmds/departments/: index.html
cli/cmds/devices/: index.html
cli/cmds/directory_groups/: index.html
cli/cmds/file_events/: index.html
cli/cmds/risk_profiles/: index.html
cli/cmds/sessions/: index.html
cli/cmds/trusted_activities/: index.html
cli/cmds/users/: index.html
cli/cmds/watchlists/: index.html
cli/getting_started/: index.html
cli/logging/: index.html
cli/migration/: index.html
cli/syslogging/: index.html
docs/: CNAME  alert_rules.md  alerts.md  api-reference.md  api.md  audit_log.md  client.md  customer.md  departments.md  devices.md  enums.md  example_logging.py  export.md  file_event_queries.md  file_events.md  index.md  legal_hold.md  logging.md  models.md  settings.md  trusted_activities.md  user_risk_profiles.md  users.md  watchlists.md
docs/api/: index.html
docs/cli/: alert_rules.md  alerts.md  audit_log.md  bulk.md  cases.md  departments.md  devices.md  directory_groups.md  file_events.md  getting_started.md  index.md  logging.md  migration.md  syslogging.md  trusted_activities.md  user_risk_profiles.md  users.md  watchlists.md
docs/cli/cmds/: actors.md  agents.md  alert_rules.md  alerts.md  cases.md  devices.md  directory_groups.md  file_events.md  files.md  legal_hold.md  orgs.md  risk-indicator-categories.md  risk_profiles.md  sessions.md  users.md  watchlists.md
docs/clients/: alert_queries.md  directory_groups.md  file_event_queries.md  file_events.md
docs/css/: custom.css  redocoverrides.css.scss
docs/guides/: azure-sentinel-data-collector.md  azure-sentinel-log-analytics.md
docs/integration-guides/: index.md
docs/integration-guides/sentinel/: azure-sentinel-data-collector.md  azure-sentinel-log-analytics.md  introduction.md
docs/javascripts/: redoc.standalone.js
docs/overrides/: main.html
docs/overrides/partials/: redoc.html  redoc_init.html  source.html
docs/sdk/: client.md  enums.md  example_logging.py  file_event_queries.md  index.md  logging.md  models.md  settings.md
docs/sdk/clients/: actors.md  agents.md  alert_queries.md  alert_rules.md  alerts.md  audit_log.md  cases.md  customer.md  departments.md  devices.md  directory_groups.md  file_event_queries.md  file_events.md  files.md  legal_hold.md  orgs.md  risk_indicator_categories.md  risk_profiles.md  sessions.md  trusted_activities.md  user_risk_profiles.md  users.md  watchlists.md
incydr/: __about__.py  __init__.py  _jsonutils.py  exceptions.py  models.py  types.py  utils.py
incydr/_alert_rules/: client.py
incydr/_alert_rules/models/: request.py  response.py
incydr/_alerts/: client.py  models.py
incydr/_alerts/models/: alert.py  enums.py  request.py  response.py
incydr/_audit_log/: client.py  models.py
incydr/_cases/: client.py  models.py
incydr/_core/: auth.py  client.py  enums.py  models.py  settings.py  util.py
incydr/_customer/: client.py  models.py
incydr/_departments/: client.py  models.py
incydr/_devices/: client.py  models.py
incydr/_directory_groups/: client.py  models.py
incydr/_file_events/: client.py  models.py
incydr/_file_events/_models/: enums.py  event.py  request.py  response.py
incydr/_file_events/models/: enums.py  event.py  request.py  response.py
incydr/_legal_hold/: client.py  models.py
incydr/_queries/: alert_rules.py  alerts.py  file_events.py  models.py  queries.py  terms.py  util.py  utils.py
incydr/_queries/_file_events/: enums.py  models.py  query.py
incydr/_trusted_activities/: client.py  models.py
incydr/_user_risk_profiles/: client.py  models.py
incydr/_users/: client.py  models.py
incydr/_watchlists/: client.py
incydr/_watchlists/models/: requests.py  responses.py  user_risk_profile_models.py
incydr/cases/: client.py  models.py
incydr/cli/: __init__.py  cases.py  core.py  cursor.py  main.py  mkdocs.yml  options.py  render.py  utils.py
incydr/core/: auth.py  client.py  models.py  session.py  settings.py
incydr/enums/: __init__.py  alert_rules.py  alerts.py  cases.py  devices.py  file_events.py  trusted_activities.py  watchlists.py
incydr/trusted_activities/: client.py
integration-guides/: index.html
overrides/: main.html
sdk/: example_logging.py  index.html
sdk/client/: index.html
sdk/enums/: index.html
sdk/logging/: index.html
sdk/models/: index.html
sdk/settings/: index.html
search/: search_index.json
src/_cli/: __init__.py  core.py  render.py  rich_utils.py  utils.py
src/_client/: __about__.py  __init__.py  exceptions.py
src/_incydr_cli/: __init__.py  core.py  cursor.py  exceptions.py  file_readers.py  main.py  render.py  rich_utils.py
src/_incydr_sdk/: __init__.py  __version__.py  exceptions.py  utils.py
src/incydr/: __init__.py  __main__.py  cli.py  models.py
tests/: conftest.py  test_actors.py  test_agents.py  test_alert_rules.py  test_alerts.py  test_audit_log.py  test_cases.py  test_cli_core.py  test_core.py  test_cursors.py  test_customer.py  test_departments.py  test_devices.py  test_directory_groups.py  test_file_events.py  test_files.py  test_legal_hold.py  test_logging.py  test_orgs.py  test_risk_indicator_categories.py  test_risk_profiles.py  test_sessions.py  test_trusted_activities.py  test_user_risk_profiles.py  test_users.py  test_util.py  test_utils.py  test_watchlists.py  test_workflow.py
tests/cli/: test_output_format.py
tests/logging/: conftest.py  test_handlers.py  test_init.py
tests/queries/: test_alert_query.py  test_event_query.py
(+212 files in other folders)
